# bazel-rustdoctest-proc-macro-failure

./: Cargo.toml  README.md  WORKSPACE
dep_crate/: BUILD.bazel  Cargo.toml
dep_crate/src/: lib.rs
lib_crate/: BUILD.bazel  Cargo.toml
lib_crate/src/: lib.rs
proc_macro_crate/: BUILD.bazel  Cargo.toml
proc_macro_crate/src/: lib.rs
