# Copyright 2023 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@rules_rust//rust:defs.bzl", "rust_doc_test", "rust_library", "rust_test")

rust_library(
    name = "lib_crate",
    srcs = [
        ":src/lib.rs",
    ],
    edition = "2021",
    proc_macro_deps = ["//proc_macro_crate"],
    deps = [
        "//dep_crate",
    ],
)

rust_test(
    name = "lib_crate_test",
    crate = ":lib_crate",
)

rust_doc_test(
    name = "lib_crate_doc_test",
    crate = ":lib_crate",
)
